--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ uvicorn[standard]==0.24.0
 jinja2==3.1.2
 python-multipart==0.0.6
 pydantic==2.5.0
-passlib==1.7.4
-python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-jose==3.3.0
+cryptography==41.0.0
 bcrypt==4.1.1
