--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-fastapi==0.100.0
-uvicorn==0.23.0
-jinja2==3.1.2
-python-multipart==0.0.6
-pydantic==2.0.0
+fastapi
+uvicorn
+jinja2
+python-multipart
